--- a/tinyleaps.be/responsive.css
+++ b/tinyleaps.be/responsive.css
@@ -72,10 +72,19 @@ section.block {
 	font-weight: bold;  
 }
 
-article { width:  100%;}
-div.content { width: 100%; }
-div.comment { width: 100%; }
-div.pics { width: 100%; }
+article,
+div.content,
+div.comment,
+div.pics
+{ width: 100%; }
+div.content,
+div.comment
+{
+	display: none;
+}
+div.pics .carousel img {
+	height: 100px;
+}
 
 nav.block > div {
 	padding: 0.25em;
@@ -173,6 +182,217 @@ nav.block > div {
 		width: 70.4%; 
 		margin-left: auto;
 		margin-right: auto;
+	}
+}
+
+/* CLEARING */
+
+
+[data-clearing] {
+	*zoom: 1;
+	margin-bottom: 0;
+	margin-left: 0;
+	list-style: none;
+}
+
+[data-clearing]:before,[data-clearing]:after {
+	content: " ";
+	display: table;
+}
+
+[data-clearing]:after {
+	clear: both;
+}
+
+[data-clearing] li {
+	float: left;
+	margin-right: 10px;
+}
+
+.clearing-blackout {
+	background: #111;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 998;
+}
+
+.clearing-blackout .clearing-close {
+	display: block;
+}
+
+.clearing-container {
+	position: relative;
+	z-index: 998;
+	height: 100%;
+	overflow: hidden;
+	margin: 0;
+}
+
+.visible-img {
+	height: 95%;
+	position: relative;
+}
+
+.visible-img img {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -50%;
+	max-height: 100%;
+	max-width: 100%;
+}
+
+.clearing-caption {
+	color: #fff;
+	line-height: 1.3;
+	margin-bottom: 0;
+	text-align: center;
+	bottom: 0;
+	background: #111;
+	width: 100%;
+	padding: 10px 30px;
+	position: absolute;
+	left: 0;
+}
+
+.clearing-close {
+	z-index: 999;
+	padding-left: 20px;
+	padding-top: 10px;
+	font-size: 40px;
+	line-height: 1;
+	color: #fff;
+	display: none;
+	text-decoration: none;
+}
+
+.clearing-close:hover,.clearing-close:focus {
+	color: #ccc;
+}
+
+.clearing-assembled .clearing-container {
+	height: 100%;
+}
+
+.clearing-assembled .clearing-container .carousel>ul {
+	display: none;
+}
+
+.clearing-feature li {
+	display: none;
+}
+
+.clearing-feature li.clearing-featured-img {
+	display: block;
+}
+
+@media only screen and (min-width:64.063em) {
+	.clearing-main-left,.clearing-main-right {
+		position: absolute;
+		height: 100%;
+		width: 40px;
+		top: 0;
+		color:transparent;
+	}
+
+	.clearing-main-left>span,.clearing-main-right>span {
+		position: absolute;
+		top: 50%;
+		display: block;
+		width: 0;
+		height: 0;
+		border: solid 16px;
+	}
+
+	.clearing-main-left {
+		left: 0;
+	}
+
+	.clearing-main-left>span {
+		left: 5px;
+		border-color: transparent;
+		border-right-color: #fff;
+	}
+
+	.clearing-main-right {
+		right: 0;
+	}
+
+	.clearing-main-right>span {
+		border-color: transparent;
+		border-left-color: #fff;
+	}
+
+	.clearing-main-left.disabled,.clearing-main-right.disabled {
+		opacity: 0.5;
+	}
+
+	.clearing-assembled .clearing-container .carousel {
+		background: #111;
+		height: 150px;
+		margin-top: 5px;
+	}
+
+	.clearing-assembled .clearing-container .carousel>ul {
+		display: block;
+		z-index: 999;
+		width: 200%;
+		height: 100%;
+		margin-left: 0;
+		position: relative;
+		left: 0;
+	}
+
+	.clearing-assembled .clearing-container .carousel>ul li {
+		display: block;
+		width: 175px;
+		height: inherit;
+		padding: 0;
+		float: left;
+		overflow: hidden;
+		margin-right: 1px;
+		position: relative;
+		cursor: pointer;
+		opacity: 0.4;
+	}
+
+	.clearing-assembled .clearing-container .carousel>ul li.fix-height img {
+		min-height: 100%;
+		height: 100%;
+		max-width: none;
+	}
+
+	.clearing-assembled .clearing-container .carousel>ul li a.th {
+		border: none;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		display: block;
+	}
+
+	.clearing-assembled .clearing-container .carousel>ul li img {
+		cursor: pointer !important;
+		min-width: 100% !important;
+	}
+
+	.clearing-assembled .clearing-container .carousel>ul li.visible {
+		opacity: 1;
+	}
+
+	.clearing-assembled .clearing-container .visible-img {
+		background: #111;
+		overflow: hidden;
+		height: 75%;
+	}
+
+	.clearing-close {
+		position: absolute;
+		top: 10px;
+		right: 20px;
+		padding-left: 0;
+		padding-top: 0;
 	}
 }
 
