--- a/tinyleaps.be/responsive.css
+++ b/tinyleaps.be/responsive.css
@@ -89,6 +89,11 @@ article h2 .f32 {
 	margin-right: 1vw;
 }
 
+article h1 .date {
+	float: right;
+	font-size: 68%;
+}
+
 div.pics .carousel img {
 	height: 80px;
 }
